--- a/JS/classwork_54/package.json
+++ b/JS/classwork_54/package.json
@@ -2,7 +2,7 @@
   "name": "ajax",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,8 +10,5 @@
   "license": "ISC",
   "devDependencies": {
     "json-server": "^0.16.3"
-  },
-  "dependencies": {
-    "axios": "^0.21.1"
   }
 }
